# wasm-snake

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: display.rs  lib.rs  model.rs  reward.rs  snake.rs  world.rs
www/: index.html  index.ts  package-lock.json  package.json  webpack.config.js
