[package]
name = "snake_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.85"
wee_alloc = "0.4.5"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
web-sys = { version = "0.3.64", features = ['Document','Element','CanvasRenderingContext2d','HtmlCanvasElement','Window', 'console'] }

[lib]
crate-type = ["cdylib"]
